--- a/css/remain.css
+++ b/css/remain.css
@@ -2,7 +2,7 @@
   margin-top: 100px;
 }
 
-.main img {
+.main .main img {
   width: unset !important;
   height: unset !important;
   display: initial !important;
@@ -21,7 +21,7 @@
   max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-}
+}z
 .footer .wrap,
 .end-ft .wrap,
 .version .wrap {
