--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -93,28 +93,52 @@
 .content {
   &-box {
     margin-top: 80px;
+    @include max(600px) {
+      margin-top: 50px;
+    }
   }
   &-inner {
     @include flex();
     margin-bottom: 80px;
+    @include max(600px) {
+      margin-bottom: 50px;
+    }
     &:nth-child(odd) {
+      @include max(882px) {
+        flex-direction: column;
+      }
       & .content-column {
         &:nth-child(1) {
           padding-right: 20px;
+          @include max(882px) {
+            padding-right: 0;
+          }
         }
         &:nth-child(2) {
           padding-left: 20px;
+          @include max(882px) {
+            padding-left: 0;
+          }
         }
       }
     }
     &:nth-child(even) {
       flex-direction: row-reverse;
+      @include max(882px) {
+        flex-direction: column;
+      }
       & .content-column {
         &:nth-child(1) {
           padding-left: 20px;
+          @include max(882px) {
+            padding-left: 0;
+          }
         }
         &:nth-child(2) {
           padding-right: 20px;
+          @include max(882px) {
+            padding-right: 0;
+          }
         }
       }
     }
@@ -123,14 +147,22 @@
     width: 50%;
     height: 100%;
     position: relative;
+    @include max(882px) {
+      width: 100%;
+    }
+    &:nth-child(1) {
+      @include max(882px) {
+        margin-bottom: 40px;
+      }
+    }
     &-title {
       & p {
         font-size: 22px;
         font-weight: 700;
         color: #1665d8;
         position: relative;
-        @include max(400px) {
-          font-size: 20px;
+        @include max(600px) {
+          font-size: 18px;
         }
         &::before {
           content: "";
@@ -177,11 +209,19 @@
       & .title {
         font-weight: 500;
         font-size: 20px;
+        @include max(600px) {
+          font-size: 16px;
+        }
       }
     }
     &-form {
       @include flex();
       justify-content: space-between;
+      @include max(882px) {
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: stretch;
+      }
     }
     &-left,
     &-right {
@@ -202,6 +242,9 @@
         font-size: 18px;
         margin-bottom: 15px;
         position: relative;
+        @include max(600px) {
+          font-size: 12px;
+        }
       }
     }
     &-detail {
@@ -212,6 +255,10 @@
         padding: 9px 54px;
         border-radius: 4px;
         background: $color-first;
+        @include max(600px) {
+          font-size: 12px;
+          padding: 8px 35px;
+        }
       }
       & .overlay {
         position: fixed;
@@ -238,6 +285,9 @@
           bottom: 0;
           transform: translate(15%, 10%);
           transition: all 1s ease-in-out;
+          @include max(882px) {
+            transform: translate(12%, 6%);
+          }
           &-box {
             padding: 30px;
             border-radius: 10px;
@@ -250,6 +300,9 @@
                 width: 100%;
                 font-size: 36px;
                 font-weight: 700;
+                @include max(500px) {
+                  font-size: 28px;
+                }
               }
               a {
                 width: auto;
@@ -258,13 +311,30 @@
             & .form-input-box {
               @include flex();
               width: 100%;
+              @include max(882px) {
+                flex-direction: column;
+              }
               & .form-input {
                 width: 50%;
+                label {
+                  @include max(500px) {
+                    font-size: 14px;
+                  }
+                }
+                @include max(882px) {
+                  width: 100%;
+                }
                 &:nth-child(1) {
                   margin-right: 15px;
+                  @include max(882px) {
+                    margin-right: 0;
+                  }
                 }
                 &:nth-child(2) {
                   margin-left: 15px;
+                  @include max(882px) {
+                    margin-left: 0;
+                  }
                 }
               }
             }
@@ -298,6 +368,9 @@
               width: 50%;
               margin: auto;
               margin-top: 30px;
+              @include max(500px) {
+                width: 100%;
+              }
               a {
                 width: 100%;
               }
@@ -417,7 +490,7 @@
     border-width: 0 2px 2px 0;
   }
   .checkbox-custom-label {
-    line-height: 16px;
+    line-height: 25px;
     font-size: 16px;
     margin-right: 0;
     margin-left: 0;
