--- a/scss/layout/_customer.scss
+++ b/scss/layout/_customer.scss
@@ -7,6 +7,9 @@
   );
   &-inner {
     margin: 100px 0;
+    @include max(600px) {
+      margin: 80px 0;
+    }
     &-title {
       text-align: center;
       margin-bottom: 40px;
@@ -48,6 +51,32 @@
     &-card {
       width: 100%;
       @include mid-flex-btw();
+      & .swiper {
+        padding: 40px 0;
+      }
+      & .tablist-inner-body {
+        & .info-small {
+          @include lc(2);
+          margin-bottom: 10px;
+          p {
+            font-size: 16px;
+          }
+        }
+        & .time-small {
+          margin-bottom: 10px;
+        }
+        & .text-small {
+          @include lc(3);
+          & > * {
+            width: 100% !important;
+            margin-left: 0 !important;
+            margin-right: 0 !important;
+            font-size: 14px !important;
+            line-height: 18px !important;
+            color: #858585 !important;
+          }
+        }
+      }
     }
     &-body {
       margin-bottom: 10px;
