--- a/scss/layout/_solution.scss
+++ b/scss/layout/_solution.scss
@@ -75,6 +75,9 @@
         border-top-right-radius: 14px;
         border-top-left-radius: 18px;
         border-right: transparent;
+        .solution-inner-icon {
+          padding: 20px 16px;
+        }
         &::before {
           content: "";
           position: absolute;
