--- a/scss/layout/_position.scss
+++ b/scss/layout/_position.scss
@@ -386,7 +386,7 @@
           display: block;
           & .detail-box-table {
             @include max(600px){
-              gap: 20px~;
+              gap: 20px;
               flex-direction: column;
             }
           }
