--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -71,6 +71,16 @@
         & .item-box {
           @include flex();
           align-items: center;
+          &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 30px;
+            background: transparent;
+            bottom: -25px;
+            left: 0;
+            cursor: pointer;
+          }
           @include max(1100px) {
             @include flex();
           }
