--- a/scss/layout/_history.scss
+++ b/scss/layout/_history.scss
@@ -61,7 +61,6 @@
         padding-top: 0;
       }
       &.vision-mission {
-        padding-top: 30px;
         & .history-inner-info {
           margin-bottom: 95px;
           h2 {
@@ -114,33 +113,33 @@
         img {
           max-height: 195px;
         }
-        &::before {
-          content: "";
-          position: absolute;
-          top: 0;
-          left: -75%;
-          z-index: 2;
-          display: block;
-          content: "";
-          width: 50%;
-          height: 100%;
-          background: -webkit-linear-gradient(
-            left,
-            rgba(255, 255, 255, 0) 0%,
-            rgba(255, 255, 255, 0.3) 100%
-          );
-          background: linear-gradient(
-            to right,
-            rgba(255, 255, 255, 0) 0%,
-            rgba(255, 255, 255, 0.3) 100%
-          );
-          -webkit-transform: skewX(-25deg);
-          transform: skewX(-25deg);
-        }
-        &:hover::before {
-          -webkit-animation: shine 0.75s;
-          animation: shine 0.75s;
-        }
+        // &::before {
+        //   content: "";
+        //   position: absolute;
+        //   top: 0;
+        //   left: -75%;
+        //   z-index: 2;
+        //   display: block;
+        //   content: "";
+        //   width: 50%;
+        //   height: 100%;
+        //   background: -webkit-linear-gradient(
+        //     left,
+        //     rgba(255, 255, 255, 0) 0%,
+        //     rgba(255, 255, 255, 0.3) 100%
+        //   );
+        //   background: linear-gradient(
+        //     to right,
+        //     rgba(255, 255, 255, 0) 0%,
+        //     rgba(255, 255, 255, 0.3) 100%
+        //   );
+        //   -webkit-transform: skewX(-25deg);
+        //   transform: skewX(-25deg);
+        // }
+        // &:hover::before {
+        //   -webkit-animation: shine 0.75s;
+        //   animation: shine 0.75s;
+        // }
       }
       & .prove-text {
         p {
@@ -271,7 +270,6 @@
     }
   }
   &-time {
-    padding-bottom: 40px;
     & .history-inner-info {
       margin-bottom: 50px;
       h2 {
