--- a/scss/layout/_feedback.scss
+++ b/scss/layout/_feedback.scss
@@ -9,6 +9,10 @@
         right: 155px;
         top: 70px;
         z-index: 998;
+        @include max(1023px) {
+          position: static;
+          padding-bottom: 30px;
+        }
         h2 {
           padding-bottom: 0;
         }
@@ -22,6 +26,10 @@
           text-align: center;
           bottom: 70px;
           left: 200px;
+          @include max(1023px) {
+            position: static;
+            padding-top: 20px;
+          }
         }
         & .feedback-pagination .swiper-pagination-bullet {
           width: 0.9375rem;
@@ -32,8 +40,14 @@
     &-card {
       @include flex();
       align-items: center;
+      @include max(1023px) {
+        flex-direction: column-reverse;
+      }
       & .feedback-left {
         width: 35%;
+        @include max(1023px) {
+          width: 50%;
+        }
         & .feedback-img {
           margin-bottom: 15px;
         }
@@ -50,6 +64,9 @@
       }
       & .feedback-right {
         width: 65%;
+        @include max(1023px) {
+          width: 100%;
+        }
         & .feedback-content {
           margin-left: 30px;
           & .feedback-comma {
@@ -69,6 +86,10 @@
               max-width: 573px;
               margin: auto;
               line-height: 30px;
+              @include max(1023px) {
+                max-width: unset;
+                padding: 20px 0;
+              }
             }
           }
         }
