--- a/scss/layout/_position.scss
+++ b/scss/layout/_position.scss
@@ -174,6 +174,9 @@
   & .location-button {
     width: 100%;
     text-align: center;
+    &.hidden-btn {
+      display: none;
+    }
     button {
       font-size: 16px;
       color: #8e8e8e;
